[build-system]
build-backend = "poetry.core.masonry.api"
requires = [
    "poetry-core>=1.0.0",
]

[tool.black]
exclude = '''
/(
  | \.git
  | \.mypy_cache
  | _build
  | build
  | dist
  | migrations
)/
'''
line-length = 79
skip-magic-trailing-comma = true

[tool.coverage.report]
fail_under = 100

[tool.coverage.run]
omit = [
    "whitelist.py",
]

[tool.poetry]
authors = [
    "jshwi <stephen@jshwisolutions.com>",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Framework :: Flask",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Software Development",
    "Typing :: Typed",
]
description = "A Flask webapp"
documentation = "https://jss.readthedocs.io/en/latest/?badge=latest"
homepage = "https://jshwisolutions.com"
keywords = [
    "flask",
    "webapp",
    "pwa",
    "jshwisolutions",
    "blog",
]
license = "MIT"
maintainers = [
    "jshwi <stephen@jshwisolutions.com>",
]
name = "jss"
packages = [
    { include = "app" },
]
readme = "README.rst"
repository = "https://github.com/jshwi/jss"
version = "1.16.2"

[tool.poetry.dependencies]
appdirs = "^1.4.4"
beautifulsoup4 = "^4.11.1"
bootstrap-flask = "^1.8.0"
click = "^8.0.3"
dominate = "^2.6.0"
email-validator = "^1.2.1"
environs = "^9.3.5"
flask = "~2.0.2"
flask-admin = "^1.5.8"
flask-compress = "^1.12"
flask-debugtoolbar = "^0.13.1"
flask-login = "^0.6.1"
flask-mail = "^0.9.1"
flask-migrate = "^3.1.0"
flask-misaka = "^1.0.0"
flask-moment = "^1.0.2"
flask-nav = "^0.6"
flask-pagedown = "^0.4.0"
flask-sqlalchemy = "^2.5.1"
flask-static-digest = "^0.2.1"
flask-talisman = "^1.0.0"
flask-wtf = "^1.0.1"
gunicorn = "^20.1.0"
hiredis = "^2.0.0"
itsdangerous = "^2.1.2"
markupsafe = "^2.1.1"
psycopg2 = "^2.9.2"
pyjwt = "^2.4.0"
python = "^3.8"
redis = "^4.3.1"
rq = "^1.10.0"
sqlalchemy = "^1.3.24"
sqlalchemy-continuum = "^1.3.11"
sqlalchemy-utils = "^0.38.2"
tomli = "^2.0.1"
werkzeug = "~2.0.2"
wtforms = "^3.0.0"

[tool.poetry.dev-dependencies]
bump2version = "^1.0.1"
flask-shell-ipython = "^0.4.1"
ipython = "^8.3.0"
prompt-toolkit = "^3.0.29"
pyaud = "^3.13.5"
pyopenssl = "^22.0.0"
pytest = "^7.1.2"
pytest-randomly = "^3.12.0"
pytest-sugar = "^0.9.4"
pytest-xdist = "^2.4.0"
restview = "^3.0.0"
sphinx-toolbox = "^2.18.3"

[tool.pyaud.audit]
modules = [
    "toc",
    "whitelist",
    "sort-pyproject",
    "format",
    "format-docs",
    "format-str",
    "imports",
    "typecheck",
    "unused",
    "lint",
    "test",
    "docs",
]

[tool.pyaud.clean]
exclude = [
    "*.egg*",
    ".mypy_cache",
    ".env",
    "instance",
    "node_modules",
]

[tool.pyaud.indexing]
exclude = [
    "whitelist.py",
    "conf.py",
    "migrations",
    "node_modules",
]

[tool.pyaud.logging]
disable_existing_loggers = true
version = 1

[tool.pyaud.logging.formatters.standard]
format = "%(asctime)s %(levelname)s %(name)s %(message)s"

[tool.pyaud.logging.handlers.default]
backupCount = 60
class = "logging.handlers.TimedRotatingFileHandler"
filename = "~/.cache/pyaud/log/pyaud.log"
formatter = "standard"
when = "d"

[tool.pyaud.logging.root]
handlers = [
    "default",
]
level = "DEBUG"
propagate = false

[tool.pytest.ini_options]
addopts = [
    "--durations=5",
    "-vv",
    "--color=yes",
    "--cov-report",
    "term-missing",
    "-n",
    "auto",
]
filterwarnings = "ignore::DeprecationWarning"
norecursedirs = [
    "docs",
    "*.egg-info",
    ".git",
    ".mypy_cache",
    ".idea",
]
